--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.535.0",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
