feat: add real-time job search streaming with SSE and improve architecture
  - Implement SSE streaming for real-time job search results
  - Auto-save results server-side for auth users
  - Add client-side storage for anonymous users
  - Simplify middleware and remove auth redirects
  - Switch to link: protocol for local wallcrawler packages
  - Update all @wallcrawler packages to v1.0.0
  - Enhance data migration and storage type safety

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -6,39 +6,39 @@
     "build": "tsc",
     "watch": "tsc -w",
     "cdk": "cdk",
-    "deploy": "./deploy.sh",
-    "deploy:dev": "./deploy.sh dev",
-    "deploy:staging": "./deploy.sh staging",
-    "deploy:prod": "./deploy.sh prod",
-    "deploy:dev:auto": "./deploy.sh dev --auto-approve",
-    "deploy:dev:skip-secrets": "./deploy.sh dev --skip-secrets",
-    "deploy:backend": "./deploy-backend.sh",
-    "deploy:backend:dev": "./deploy-backend.sh dev",
-    "deploy:backend:staging": "./deploy-backend.sh staging",
-    "deploy:backend:prod": "./deploy-backend.sh prod",
-    "deploy:nextjs": "./deploy-nextjs.sh",
-    "deploy:nextjs:dev": "./deploy-nextjs.sh dev",
-    "deploy:nextjs:staging": "./deploy-nextjs.sh staging",
-    "deploy:nextjs:prod": "./deploy-nextjs.sh prod",
-    "verify": "./verify-deployment.sh",
-    "verify:dev": "./verify-deployment.sh dev",
-    "verify:staging": "./verify-deployment.sh staging",
-    "verify:prod": "./verify-deployment.sh prod",
-    "secrets": "ts-node deploy-secrets.ts",
-    "secrets:dev": "ts-node deploy-secrets.ts dev",
-    "secrets:staging": "ts-node deploy-secrets.ts staging",
-    "secrets:prod": "ts-node deploy-secrets.ts prod",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:dev": "./scripts/deploy.sh dev",
+    "deploy:staging": "./scripts/deploy.sh staging",
+    "deploy:prod": "./scripts/deploy.sh prod",
+    "deploy:dev:auto": "./scripts/deploy.sh dev --auto-approve",
+    "deploy:dev:skip-secrets": "./scripts/deploy.sh dev --skip-secrets",
+    "deploy:backend": "./scripts/deploy-backend.sh",
+    "deploy:backend:dev": "./scripts/deploy-backend.sh dev",
+    "deploy:backend:staging": "./scripts/deploy-backend.sh staging",
+    "deploy:backend:prod": "./scripts/deploy-backend.sh prod",
+    "deploy:nextjs": "./scripts/deploy-nextjs.sh",
+    "deploy:nextjs:dev": "./scripts/deploy-nextjs.sh dev",
+    "deploy:nextjs:staging": "./scripts/deploy-nextjs.sh staging",
+    "deploy:nextjs:prod": "./scripts/deploy-nextjs.sh prod",
+    "verify": "./scripts/verify-deployment.sh",
+    "verify:dev": "./scripts/verify-deployment.sh dev",
+    "verify:staging": "./scripts/verify-deployment.sh staging",
+    "verify:prod": "./scripts/verify-deployment.sh prod",
+    "secrets": "ts-node scripts/deploy-secrets.ts",
+    "secrets:dev": "ts-node scripts/deploy-secrets.ts dev",
+    "secrets:staging": "ts-node scripts/deploy-secrets.ts staging",
+    "secrets:prod": "ts-node scripts/deploy-secrets.ts prod",
     "diff": "cdk diff --all",
     "synth": "cdk synth --all",
     "destroy:dev": "cdk destroy --all --context environment=dev",
     "destroy:staging": "cdk destroy --all --context environment=staging",
     "destroy:prod": "echo 'WARNING: About to destroy PRODUCTION! Use: cdk destroy --all --context environment=prod'",
-    "cleanup": "./cleanup.sh",
-    "cleanup:dev": "./cleanup.sh dev",
-    "cleanup:staging": "./cleanup.sh staging",
-    "cleanup:prod": "./cleanup.sh prod",
-    "cleanup:dev:force": "./cleanup.sh dev --force",
-    "cleanup:dev:amplify": "./cleanup.sh dev amplify"
+    "cleanup": "./scripts/cleanup.sh",
+    "cleanup:dev": "./scripts/cleanup.sh dev",
+    "cleanup:staging": "./scripts/cleanup.sh staging",
+    "cleanup:prod": "./scripts/cleanup.sh prod",
+    "cleanup:dev:force": "./scripts/cleanup.sh dev --force",
+    "cleanup:dev:amplify": "./scripts/cleanup.sh dev amplify"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
