--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/jsonwebtoken": "^9.0.10",
-    "@wallcrawler/sdk": "file:../wallcrawler/packages/sdk-node",
+    "@wallcrawler/sdk": "link:../wallcrawler/packages/sdk-node",
+    "@wallcrawler/components": "link:../wallcrawler/packages/components",
     "@wallcrawler/stagehand": "link:../wallcrawler/packages/stagehand",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
